Added the Advertisement feature

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -20,6 +20,7 @@
     <script src="js/directives/autocomplete-directive.js" charset="UTF-8"></script>
     <script src="js/directives/custom-input-directive.js" charset="UTF-8"></script>
     <script src="js/directives/media-template-directive.js" charset="UTF-8"></script>
+    <script src="js/directives/ads-template-directive.js" charset="UTF-8"></script>
     <script src="js/factories/searchblox-factory.js" charset="UTF-8"></script>
     <script src="js/filters/searchblox-filter.js" charset="UTF-8"></script>
     <script src="js/modules/facet-module.js" charset="UTF-8"></script>
@@ -36,10 +37,10 @@
     <link rel="stylesheet" href="css/autosuggest-style.css"/>
 
 </head>
-<body >
+<body style="background:url('images/subtle_dots.png')">
 <div ng-app="searchbloxModule" class="container">
     <div style="margin-top:10px;margin-bottom:10px" align="center">
-        <a href="http://www.searchblox.com"><img src="images/tm-logo-searchblox.gif"/></a>
+        <a href="http://www.searchblox.com"><img src="images/logo-searchblox.png"/></a>
     </div>
 
     <div ng-controller="searchbloxController" ng-init="init()">
