Added the Advertisement feature

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -45,7 +45,7 @@
 
     <div ng-controller="searchbloxController" ng-init="init()">
         <form class="center-block" >
-            <custominput id="xyz" ng-model="query" onsearch="startSearch">
+            <custominput id="xyz" ng-model="query" onsearch="startSearch" inputstyle="inputClass">
                 <autocomplete source="loadItems" ng-show="showAutoSuggest"></autocomplete>
             </custominput>
         </form>
