Added the Advertisement feature

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -29,10 +29,10 @@
     <script src="js/custom-lib/myscripts.js" charset="UTF-8"></script>
     
 	<script type="text/javascript" src="../plugin/vendor/json2extension.js" charset="UTF-8"></script>
-  	<!--<script type="text/javascript" src="../plugin/vendor/jquery/1.7.1/jquery-1.7.1.min.js" charset="UTF-8"></script>-->
+  	<!--<script type="text/javascript" src="../plugin/vendor/jquery/1.7.1/jquery-1.7.1.min.js" charset="UTF-8"></script>
   	<script type="text/javascript" src="../plugin/vendor/moment.js" charset="UTF-8"></script>
   	<script type="text/javascript" src="../plugin/vendor/jquery.prettyPhoto.js" charset="UTF-8"></script>
-  	<script type="text/javascript" src="../plugin/vendor/tagcloud/jquery.tagcloud.js" charset="UTF-8"></script>
+  	<script type="text/javascript" src="../plugin/vendor/tagcloud/jquery.tagcloud.js" charset="UTF-8"></script>-->
 
     <link rel="stylesheet" href="css/autosuggest-style.css"/>
 
