Fixed undefined exceptions

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="lib/angular-sanitize.min.js" charset="UTF-8"></script>
 
     <script type="text/javascript" src="lib/moment.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="lib/json2extension.js" charset="UTF-8"></script>
+
     <script src="lib/ui-bootstrap-tpls-0.10.0.js" charset="UTF-8"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/custom-style.css"/>
@@ -27,12 +29,6 @@
     <script src="js/modules/searchblox-module.js" charset="UTF-8"></script>
     <script src="js/services/searchblox-service.js" charset="UTF-8"></script>
     <script src="js/custom-lib/myscripts.js" charset="UTF-8"></script>
-    
-	<script type="text/javascript" src="../plugin/vendor/json2extension.js" charset="UTF-8"></script>
-  	<!--<script type="text/javascript" src="../plugin/vendor/jquery/1.7.1/jquery-1.7.1.min.js" charset="UTF-8"></script>
-  	<script type="text/javascript" src="../plugin/vendor/moment.js" charset="UTF-8"></script>
-  	<script type="text/javascript" src="../plugin/vendor/jquery.prettyPhoto.js" charset="UTF-8"></script>
-  	<script type="text/javascript" src="../plugin/vendor/tagcloud/jquery.tagcloud.js" charset="UTF-8"></script>-->
 
     <link rel="stylesheet" href="css/autosuggest-style.css"/>
 
