ng-grid ui implemented

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-    <title>SearchBlox Faceted Search</title>
+    <title>SearchBlox Database Search</title>
     <meta charset="utf-8"/>
     <script src="lib/jquery-2.1.0.min.js"></script>
 
@@ -12,9 +12,12 @@
     <script type="text/javascript" src="lib/moment.js" charset="UTF-8"></script>
     <script type="text/javascript" src="lib/json2extension.js" charset="UTF-8"></script>
 
+    <script src="lib/ui-grid.min.js" charset="UTF-8"></script>
+    <link rel="stylesheet" href="css/custom-style.css"/>
+    
     <script src="lib/ui-bootstrap-tpls-0.10.0.js" charset="UTF-8"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/custom-style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
     <link rel="shortcut icon" href="http://searchblox-website.s3.amazonaws.com/favicon.ico" />
     <script src="bootstrap/js/bootstrap.min.js" charset="UTF-8"></script>
 
@@ -50,7 +53,7 @@
     </div>
     <div id="footer" style="margin-top: 10px;" align="center">
     <span
-            class="app-font">Copyright 2014 SearchBlox Software, Inc.</span><span class="links">&nbsp;<a
+            class="app-font">Copyright {{ddate}} SearchBlox Software, Inc.</span><span class="links">&nbsp;<a
             href="http://www.searchblox.com" target="_blank">Contact Us</a></span></div>
 
 </div>
