--- a/plugin/index.html
+++ b/plugin/index.html
@@ -15,6 +15,9 @@
     <script src="lib/ui-grid.min.js" charset="UTF-8"></script>
     <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
 
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+
     <script src="lib/ui-bootstrap-tpls-0.10.0.js" charset="UTF-8"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
     <link rel="shortcut icon" href="http://searchblox-website.s3.amazonaws.com/favicon.ico" />
@@ -31,6 +34,7 @@
     <script src="js/factories/searchblox-factory.js" charset="UTF-8"></script>
     <script src="js/filters/searchblox-filter.js" charset="UTF-8"></script>
     <script src="js/modules/facet-module.js" charset="UTF-8"></script>
+    <script src="js/modules/rw-ui-slider.js" charset="UTF-8"></script>
     <script src="js/modules/searchblox-module.js" charset="UTF-8"></script>
     <script src="js/services/searchblox-service.js" charset="UTF-8"></script>
     <script src="js/custom-lib/myscripts.js" charset="UTF-8"></script>
