--- a/plugin/index.html
+++ b/plugin/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
     <script>document.write('<base href="' + document.location + '">');</script>
-    <title ng-bind="siteTitle"></title>
+    <title></title>
     <meta charset="utf-8"/>
     <script src="lib/jquery-2.1.0.min.js"></script>
 
